--- a/ApiNode/package.json
+++ b/ApiNode/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "set NODE_ENV=test&&jest",
-    "posttest": "rimraf ./src/database/database.test.sqlite"
+    "test": "set NODE_ENV=test&&jest -i"
   },
   "dependencies": {
     "express": "^4.17.1",
